fixing issues